plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {

    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {

        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {

    maven {
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

}

dependencies {

    //Avaritia
    implementation "curse.maven:re-avaritia-623969:${avaritia_version}"
    //JEI
    implementation "curse.maven:jei-238222:${jei_version}"
    //Refined Storage
    implementation "curse.maven:refined-storage-243076:${refined_Storage_version}"
    //Create
    implementation "curse.maven:create-328085:${create_version}"
    //PneumaticCraft: Repressurized
    implementation "curse.maven:pneumaticcraft-repressurized-281849:${pneumaticcraft_repressurized_version}"

    //Ender IO
    implementation "curse.maven:ender-io-64578:${ender_io_version}"
    //Applied Energistics
    implementation "curse.maven:applied-energistics-2-223794:${applied_energistics_version}"
    //GuideME
    implementation "curse.maven:guideme-1173950:${guideme_version}"
    //Patchouli
    implementation "curse.maven:patchouli-306770:${patchouli_version}"
    //Curios
    implementation "curse.maven:curios-309927:${curios_version}"
    //Jade
    implementation "curse.maven:jade-324717:${jade_version}"
    //Titanium
    implementation "curse.maven:titanium-287342:${titanium_version}"
    //Industrial Foregoing
    implementation "curse.maven:industrial-foregoing-266515:${industrial_foregoing_version}"

}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
